superlance Changelog
====================

0.7 (2012-08-22)
----------------

- The ``crashmailbatch --toEmail`` option now accepts a comma-separated
  list of email addresses.

0.6 (2011-08-27)
----------------

- Separated unit tests into their own files

- Created ``fatalmailbatch`` plugin

- Created ``crashmailbatch`` plugin

- Sphinxified documentation.

- Fixed ``test_suite`` to use the correct module name in setup.py.

- Fixed the tests for ``memmon`` to import the correct module.

- Applied patch from Sam Bartlett: processes which are not autostarted
  have pid "0".  This was crashing ``memmon``.

- Add ``smtpHost`` command line flag to ``mailbatch`` processors.

- Added ``crashsms`` from Juan Batiz-Benet

- Converted ``crashmailbatch`` and friends from camel case to pythonic style

- Fixed a bug where ``httpok`` would crash with the ``-b`` (in-body)
  option.  Patch by Joaquin Cuenca Abela.

- Fixed a bug where ``httpok`` would not handle a URL with a query string
  correctly.  Patch by Joaquin Cuenca Abela.

- Fixed a bug where ``httpok`` would not handle process names with a
  group ("group:process") properly.  Patch by Joaquin Cuenca Abela.


0.5 (2009-05-24)
---------------

- Added the ``memmon`` plugin, originally bundled with supervisor and
  now moved to superlance.


0.4 (2009-02-11)
----------------

- Added ``eager`` and ``not-eager`` options to the ``httpok`` plugin.

  If ``not-eager`` is set, and no process being monitored is in the
  ``RUNNING`` state, skip the URL check / mail message.


0.3 (2008-12-10)
----------------

- Added ``gcore`` and ``coredir`` options to the ``httpok`` plugin.


0.2 (2008-11-21)
----------------

- Added the ``crashmail`` plugin.


0.1 (2008-09-18)
----------------

- Initial release