@@ -1,6 +1,15 @@
 superlance Changelog
 ====================
 
+Next Release
+------------
+
+- Added ``-n`` option to memmon that adds this name to the email
+  subject to identify which memmon process restarted a process.
+  Useful in case you run multiple supervisors that control
+  different processes with the same name.
+  [fRiSi]
+  
 0.7 (2012-08-22)
 ----------------
 
